2004-10-28  Vincent Noel  <vnoel@cox.net>

	* info.c : Remove useless #include's.

	* misc.c (MakeErrorDialog): Port from gnome_message_box_new to
	gtk_message_dialog_new.

	* logview.c (logview_help): Use a convenience error function.

	* logrtns.c: Remove prototype.

	* logview.h: 
	* log_repaint.c: 
	* monitor.c: Remove useless #define's and #include's.	

	* about.c (AboutShowWindow): use the very convenient
	gtk_about_show_dialog.
	(AboutShowWindow): Add a bunch of authors.

	* monitor.c (mon_check_logs):
	* info.c: Remove unnecessary casts.

	* logview.c (logview_help): Handle errors when displaying help,
	display it on the right screen.

	* about.c (AboutShowWindow): Port to gtk_about_dialog.

	* logview.c (main): Use gtk_window_set_default_icon_name.

2004-10-27  Vincent Noel  <vnoel@cox.net>

	* zoom.c (repaint_zoom): Fixes issues brought up by multiple windows.

	* log_repaint.c: Remove the save_rows_to_expand function which is
	now useless.

	* logview.c (CloseLogMenu): Fixes issues with menu items state.

	* calendar.c: Remove unused global variables.

	* logview.c: Use the GTK_STOCK_PROPERTIES icon.

	* monitor.c: Major rewrite. Now any opened log can be monitored by
	toggling the "monitor" check menu item.

	* logview.c: Allow the opening of new windows. Remove the "Switch
	Log" option : now each window display its own log. Removed the
	"Close All Logs" option. Disabled the "Monitor" option for now
	while I figure how to implement it.
	(LoadLogMenu, FileSelectResponse): No need for MAX_NUM_LOGS
	anymore, we can open as many logs as we want.
	(FileSelectResponse): Always open a log in a new window, except if
	the window is empty or if the log is already opened in another window.

2004-10-26  Vincent Noel  <vnoel@cox.net>

	* logview.c: Major rewrite :
	 - remove most global variables
	 - the log viewer window now creates its own gtkwidget and class
	 - plenty of unused variables and functions removed