@@ -1,5 +1,7 @@
 2004-10-28  Vincent Noel  <vnoel@cox.net>
 
+	* logrtns.h: Remove a bunch of useless #include's.
+
 	* info.c : Remove useless #include's.
 
 	* misc.c (MakeErrorDialog): Port from gnome_message_box_new to
